--- a/package.yaml
+++ b/package.yaml
@@ -6,9 +6,9 @@ author:              "Author name here"
 maintainer:          "example@example.com"
 copyright:           "2018 Author name here"
 
-extra-source-files:
-- README.md
-- ChangeLog.md
+#extra-source-files:
+#- README.md
+#- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -36,10 +36,15 @@ dependencies:
 - async
 - brick
 - lens
+- vty
+- bytestring-conversion
+- ip
+- network-info
+- vector
 
-ghc-options:
-  - -Wall
-  - -Werror
+#ghc-options:
+  #- -Wall
+  #- -Werror
 library:
   source-dirs: src
 
