--- a/trawler.cabal
+++ b/trawler.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e245873cd015aec9dc8bc9dfb1907561c9f3884f34f9074a8ea633182fe081a7
+-- hash: 28a0144340dcad6729d1d1369ce8cfa98797f7ac36753bcd44010997156fa699
 
 name:           trawler
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Paths_trawler
   hs-source-dirs:
       src
+  ghc-options: -Wall -Werror -Wno-unused-do-bind
   build-depends:
       async
     , attoparsec
@@ -66,7 +67,7 @@ executable trawler
       Paths_trawler
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Werror -Wno-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       async
     , attoparsec
